# hpcpy

./: .gitattributes  .readthedocs.yml  .wordlist.txt  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  mkdocs.yml  pyproject.toml  setup.py  tox.ini
.conda/: build_env.yaml  hpcpy-dev.yml  meta.yaml
.github/: .spellcheck.yml  .wordlist.txt  ISSUE_TEMPLATE.md  spellcheck.yml  wordlist.txt
.github/workflows/: .spellcheck.yml  .wordlist.txt  cd.yml  ci.yml  ci_pytest.yml  ci_spelling.yml
docs/: Makefile  advanced_usage.md  conf.py  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
hpcpy/: __init__.py  _version.py  client.py  constants.py  exceptions.py  job.py  status.py  utilities.py
hpcpy/client/: __init__.py  base.py  client_factory.py  direct.py  job.py  mock.py  pbs.py  slurm.py  status.py
hpcpy/constants/: __init__.py  direct.py  pbs.py  slurm.py
hpcpy/data/test/: direct.sh  status-pbs-held.json  status-pbs.json  status-slurm.json
hpcpy/data/test/scripts/: slurm_get_states.py
src/hpcpy/: __init__.py  client.py  constants.py  utilities.py
src/hpcpy/data/test/: test.j2
tests/: __init__.py  test_client.py  test_core.py  test_direct.py  test_direct_client.py  test_hpcpy.py  test_job.py  test_job_pbs.py  test_job_slurm.py  test_pbs_client.py  test_slurm_client.py  test_utilities.py
